# face_detection_mediapipe

./: .gitignore  README.md  main.py  postprocess.py
c++/: .gitignore  CMakeLists.txt
c++/include/: const.h  detection_camera.h  image_helpers.h  tflite_wrapper.h
c++/src/: const.cpp  detection_camera.cc  main.cpp  tflite_wrapper.cc
